[gd_scene load_steps=12 format=2]

[ext_resource path="res://games/hideout_gouge/assets/fire/fire_3.png" type="Texture" id=1]
[ext_resource path="res://games/hideout_gouge/assets/fire/fire_1.png" type="Texture" id=2]
[ext_resource path="res://games/hideout_gouge/assets/fire/fire_4.png" type="Texture" id=3]
[ext_resource path="res://games/hideout_gouge/assets/fire/fire_2.png" type="Texture" id=4]
[ext_resource path="res://games/hideout_gouge/scripts/FireClock.gd" type="Script" id=5]
[ext_resource path="res://games/hideout_gouge/assets/sfx/fire_out.wav" type="AudioStream" id=6]
[ext_resource path="res://games/hideout_gouge/assets/sfx/fire.wav" type="AudioStream" id=7]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
} ]

[node name="FireClock" type="Node2D"]
script = ExtResource( 5 )

[node name="fire_0" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -100 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "fire"
frame = 2
playing = true

[node name="fire_1" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 52.0101, -84.2671 )
scale = Vector2( 1.74313, 2 )
frames = SubResource( 2 )
animation = "fire"
frame = 2
playing = true

[node name="fire_2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 88.1858, -50.2729 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "fire"
frame = 1
playing = true

[node name="fire_3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 100, -5 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
playing = true

[node name="fire_4" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 85.1729, 42.159 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
playing = true

[node name="fire_5" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 52.0157, 74.7717 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
frame = 3
playing = true

[node name="fire_6" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 95 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
frame = 3
playing = true

[node name="fire_7" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -51.1131, 79.1459 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
frame = 2
playing = true

[node name="fire_8" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -89.4042, 43.5302 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
frame = 1
playing = true

[node name="fire_9" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -100, -5 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
frame = 1
playing = true

[node name="fire_10" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -81.6799, -53.9366 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
frame = 1
playing = true

[node name="fire_11" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -45.0762, -82.8342 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "fire"
playing = true

[node name="tick_timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="fire_in" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="fire_out" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="tick_timer" to="." method="_on_tick_timer_timeout"]
